# directadmin-mcp

./: .bumpversion.cfg  .env.sample  .gitignore  Dockerfile  README.md  client.py  config.py  da.py  docker-compose.yml  main.py  mcp_instance.py  pyproject.toml  requirements.txt  server.py
scripts/: cleanup.sh
tools/: __init__.py  admin.py  backend_search.py  clamav.py  common.py  cpanel.py  custombuild.py  database_monitor.py  directadmin_config.py  email.py  hostname.py  info.py  password.py  resellers.py  sessions.py  tls.py  users.py  versioning.py  wordpress.py
