[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.py$'

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "B", "I"]
exclude = ["migrations"]

[tool.bumpver]
current_version = "0.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump: {old_version} → {new_version}"
tag_message = "Release {new_version}"
tag_scope = "repo"
commit = true
tag = true

[tool.bumpver.file_patterns]
"README.md" = ["{version}"]
"directadmin_mcp/__init__.py" = ["{version}"]